--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 NETLIFY_URL=http://localhost:3000
 REMOTE_SERVER=http://localhost:4000
-MONGO_CONNECTION_STRING=mongodb://localhost:27017/kanbas
+; MONGO_CONNECTION_STRING=mongodb://localhost:27017/kanbas
 
 SESSION_SECRET=super session secret
 NODE_SERVER_DOMAIN=https://kanbas-node-server-app-0gs8.onrender.com
