--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-NETLIFY_URL=http://localhost:3000
+NETLIFY_URL=https://6730c350d55b130008d9f840--glowing-llama-3e0a2d.netlify.app/
 REMOTE_SERVER=http://localhost:4000
-SESSION_SECRET=super secret session phrase
+SESSION_SECRET=super secret session
 MONGO_CONNECTION_STRING=mongodb://localhost:27017/kanbas
